Add strings.js to translate static strings sent by the server

--- a/src/js/lang/Makefile
+++ b/src/js/lang/Makefile
@@ -1,5 +1,5 @@
 update-pot:
-	xgettext -d tourenplaner -o tourenplaner.pot -f POTFILES -D ../mylibs -L Python
+	xgettext -d tourenplaner -o tourenplaner.pot -f POTFILES -D ../mylibs -D . -L Python
 
 update-js:
 	python2 po2js.py de.po
